--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "^16.5.2",
     "react-native": "^0.57.1",
     "react-native-flash-message": "^0.1.10",
+    "react-native-paper": "^2.1.3",
     "react-navigation": "^2.17.0",
+    "react-navigation-material-bottom-tabs": "^0.4.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
