--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "^0.57.1",
     "react-native-flash-message": "^0.1.10",
     "react-native-paper": "^2.1.3",
+    "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.17.0",
     "react-navigation-material-bottom-tabs": "^0.4.0",
     "react-redux": "^5.0.7",
