--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^4.10.2",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "strophe.js": "^1.2.16",
+    "xmldom": "^0.1.27"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
