--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "^16.5.2",
     "react-native": "^0.57.1",
     "react-native-flash-message": "^0.1.10",
+    "react-native-gifted-chat": "^0.4.3",
+    "react-native-maps": "^0.22.0",
     "react-native-modal": "^6.5.0",
     "react-native-paper": "^2.1.3",
     "react-native-vector-icons": "^6.0.2",
