--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-native": "^0.57.1",
+    "react-native-firebase": "^5.1.0",
     "react-native-flash-message": "^0.1.10",
     "react-native-gifted-chat": "^0.4.3",
     "react-native-maps": "^0.22.0",
