--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "^0.57.1",
     "react-native-firebase": "^5.1.0",
     "react-native-flash-message": "^0.1.10",
+    "react-native-fs": "^2.13.2",
     "react-native-gifted-chat": "^0.4.3",
     "react-native-maps": "^0.22.0",
     "react-native-modal": "^6.5.0",
@@ -29,6 +30,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^4.10.2",
     "redux-thunk": "^2.3.0",
+    "scheduler": "^0.14.0",
     "strophejs-plugins": "0.0.7",
     "xmldom": "^0.1.27"
   },
