--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-flash-message": "^0.1.10",
     "react-native-fs": "^2.13.2",
     "react-native-gifted-chat": "^0.4.3",
+    "react-native-gravatar": "^1.0.2",
     "react-native-maps": "^0.22.0",
     "react-native-modal": "^6.5.0",
     "react-native-paper": "^2.1.3",
